# fastapi-web-server

./: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  run.py
.github/workflows/: ci.yaml
app/: main.py
